--- a/README.org
+++ b/README.org
@@ -42,7 +42,7 @@ Usable in [[https://packages.debian.org/emacs-nox][emacs-nox]] and works in [[ht
   - [[#true-colors-in-terminal-emacs][True colors in terminal Emacs]]
   - [[#grepreplace-text-in-project][Grep/Replace text in project]]
   - [[#hydraswipercounselivy][Hydra/Swiper/Counsel/Ivy]]
-  - [[#react-and-jsx][React and JSX]]
+  - [[#set-auto-mode-alist][Set =auto-mode-alist=]]
   - [[#git-gutter][git-gutter]]
   - [[#setup-fonts-in-gui-emacs][Setup fonts in GUI Emacs]]
   - [[#synchronize-setup-with-git][Synchronize setup with Git]]
@@ -312,21 +312,21 @@ The programming syntax check is done by [[https://github.com/redguardtoo/lazyfly
 Insert below code to =~/.custom.el= to increase the interval of check,
 #+begin_src elisp
 (with-eval-after-load 'wucuo
-;; 4 second
-(setq wucuo-update-interval 4))
+  ;; 4 second
+  (setq wucuo-update-interval 4))
 (with-eval-after-load 'lazyflymake
-;; 2 seconds
-(setq lazyflymake-update-interval 3))
+  ;; 2 seconds
+  (setq lazyflymake-update-interval 3))
 #+end_src
 *** Why opening file is slow
 Insert below code into =~/.custom.el=, replace "/home/user1/your-file-path" with the file you want to open,
 #+begin_src elisp
 (defun profile-open-file ()
-(interactive)
-(profiler-start 'cpu)
-(find-file "/home/user1/your-file-path")
-(profiler-report)
-(profiler-stop))
+  (interactive)
+  (profiler-start 'cpu)
+  (find-file "/home/user1/your-file-path")
+  (profiler-report)
+  (profiler-stop))
 #+end_src
 
 Run =M-x profile-open-file= and read the report.
@@ -406,10 +406,10 @@ So you can use any functions defined in my emacs configuration.
 Here is a sample to override keybindings defined in =lisp/init-evil.el=,
 #+begin_src elisp
 (with-eval-after-load 'evil
-(my-space-leader-def
-"ss" 'pwd
-"ll" 'pwd
-"pp" 'pwd))
+  (my-space-leader-def
+    "ss" 'pwd
+    "ll" 'pwd
+    "pp" 'pwd))
 #+end_src
 ** Code navigation and auto-completion
 It's usable out of box if Ctags is installed
@@ -470,20 +470,26 @@ You can exclude multiple keywords using =!keyword1 keyword2= in =ivy=.
 I love all the packages from [[https://github.com/abo-abo][Oleh Krehel (AKA abo-abo)]]. Every article from his [[https://oremacs.com/][blog]] is worth reading ten times.
 
 You can input =:pinyin1 pinyin2 !pinyin3 pinyin4= in ivy UI to search by Chinese Pinyin. The key point is to make sure the first character of input is ":".
-** React and JSX
-I use =rjsx-mode= with Emacs v25+. It's based on =js2-mode= so it has excellent imenu support.
+** Set =auto-mode-alist=
+The =auto-mode-alist= associates major modes with files.
 
-But =web-mode= is also very popular to edit jsx files.
+For example, associate =rjsx-mode= file with extension "*.jsx",
+#+begin_src elisp
+(push "\\.jsx\\'" auto-mode-alist)
+#+end_src
 
-You can add =(add-auto-mode 'rjsx-mode "\\.jsx\\'")= into =~/.custome.el= to use =web-mode= for jsx files.
+Or you can use function =my-add-auto-mode= provided by this configuration,
+#+begin_src elisp
+(my-add-auto-mode 'rjsx-mode "\\.jsx\\'")
+#+end_src
 ** git-gutter
 I use modified version of =git-gutter= for now until my pull request is merged into official repository.
 
 You can set =git-gutter:exp-to-create-diff= to make git gutter support other VCS (Perforce, for example),
 #+begin_src elisp
 (setq git-gutter:exp-to-create-diff
-(shell-command-to-string (format "p4 diff -du -db %s"
-(file-relative-name buffer-file-name))))
+      (shell-command-to-string (format "p4 diff -du -db %s"
+                                       (file-relative-name buffer-file-name))))
 #+end_src
 ** Setup fonts in GUI Emacs
 Non-Chinese can use [[https://github.com/rolandwalker/unicode-fonts][unicode-fonts]].
@@ -611,14 +617,14 @@ Please run =curl -L http://tumashu.github.io/pyim-bigdict/pyim-bigdict.pyim.gz |
 The default pinyin scheme is =quanpin= but you can insert below code into =~/.custom.el= to switch to a different pinyin scheme,
 #+begin_src elisp
 (with-eval-after-load 'pyim
-(setq pyim-default-scheme 'xiaohe-shuangpin))
+  (setq pyim-default-scheme 'xiaohe-shuangpin))
 #+end_src
 *** Use Wubi
 Dictionary for wubi is already installed. Please insert below code into =~/.custom.el= to enable wubi dictionary and use wubi scheme,
 #+begin_src elisp
 (setq my-pyim-enable-wubi-dict t)
 (with-eval-after-load 'pyim
-(setq pyim-default-scheme 'wubi))
+  (setq pyim-default-scheme 'wubi))
 #+end_src
 ** Install multiple versions of Emacs
 Run below commands in shell:
@@ -707,36 +713,35 @@ You might want to modify =include-system-site-packages= in =~/.emacs.d/elpy/rpc-
 ** Set up [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]]
 You could insert below code into =~/.custom.el=,
 #+begin_src elisp
-
 (with-eval-after-load 'lsp-mode
-;; enable log only for debug
-(setq lsp-log-io nil)
-;; use `evil-matchit' instead
-(setq lsp-enable-folding nil)
-;; no real time syntax check
-(setq lsp-diagnostic-package :none)
-;; handle yasnippet by myself
-(setq lsp-enable-snippet nil)
-;; use `company-ctags' only.
-;; Please note `company-lsp' is automatically enabled if it's installed
-(setq lsp-enable-completion-at-point nil)
-;; turn off for better performance
-(setq lsp-enable-symbol-highlighting nil)
-;; use find-fine-in-project instead
-(setq lsp-enable-links nil)
-;; auto restart lsp
-(setq lsp-restart 'auto-restart)
-;; don't watch 3rd party javascript libraries
-(push "[/\\\\][^/\\\\]*\\.\\(json\\|html\\|jade\\)$" lsp-file-watch-ignored)
-;; don't ping LSP language server too frequently
-(defvar lsp-on-touch-time 0)
-(defun my-lsp-on-change-hack (orig-fun &rest args)
-;; do NOT run `lsp-on-change' too frequently
-(when (> (- (float-time (current-time))
-lsp-on-touch-time) 120) ;; 2 mins
-(setq lsp-on-touch-time (float-time (current-time)))
-(apply orig-fun args)))
-(advice-add 'lsp-on-change :around #'my-lsp-on-change-hack))
+  ;; enable log only for debug
+  (setq lsp-log-io nil)
+  ;; use `evil-matchit' instead
+  (setq lsp-enable-folding nil)
+  ;; no real time syntax check
+  (setq lsp-diagnostic-package :none)
+  ;; handle yasnippet by myself
+  (setq lsp-enable-snippet nil)
+  ;; use `company-ctags' only.
+  ;; Please note `company-lsp' is automatically enabled if it's installed
+  (setq lsp-enable-completion-at-point nil)
+  ;; turn off for better performance
+  (setq lsp-enable-symbol-highlighting nil)
+  ;; use find-fine-in-project instead
+  (setq lsp-enable-links nil)
+  ;; auto restart lsp
+  (setq lsp-restart 'auto-restart)
+  ;; don't watch 3rd party javascript libraries
+  (push "[/\\\\][^/\\\\]*\\.\\(json\\|html\\|jade\\)$" lsp-file-watch-ignored)
+  ;; don't ping LSP language server too frequently
+  (defvar lsp-on-touch-time 0)
+  (defun my-lsp-on-change-hack (orig-fun &rest args)
+    ;; do NOT run `lsp-on-change' too frequently
+    (when (> (- (float-time (current-time))
+                lsp-on-touch-time) 120) ;; 2 mins
+      (setq lsp-on-touch-time (float-time (current-time)))
+      (apply orig-fun args)))
+  (advice-add 'lsp-on-change :around #'my-lsp-on-change-hack))
 #+end_src
 
 Then run `M-x lsp` to start lsp client and server. Check [[https://github.com/emacs-lsp/lsp-mode]] on how to install lsp server.
