--- a/docker/Dockerfile.latex
+++ b/docker/Dockerfile.latex
@@ -1,4 +1,4 @@
-FROM my_editor:base
+FROM localhost/my_editor:base
 
 RUN sed -i 's/archive\.ubunutu\.com/tw.archive.ubuntu.com/' /etc/apt/sources.list && \
     apt-get update && \
