--- a/docker/Dockerfile.latex
+++ b/docker/Dockerfile.latex
@@ -1,6 +1,5 @@
 FROM localhost/my_editor:base
 
-RUN sed -i 's/archive\.ubunutu\.com/tw.archive.ubuntu.com/' /etc/apt/sources.list && \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -y texlive-full zathura && \
     rm -rf /var/lib/apt/lists/*
