--- a/docker/Dockerfile.latex
+++ b/docker/Dockerfile.latex
@@ -1,5 +1,10 @@
 FROM localhost/my_editor:base
 
 RUN apt-get update && \
-    apt-get install -y texlive-full zathura && \
+    apt-get install -y texlive-full zathura dbus-x11 pdftk && \
+    sed -i 's/.*"PDF".*/  <policy domain="coder" rights="read | write" pattern="PDF" \/>/' /etc/ImageMagick-6/policy.xml && \
     rm -rf /var/lib/apt/lists/*
+
+RUN echo 'source <(dbus-launch); export DBUS_SESSION_BUS_ADDRESS; export DBUS_SESSION_BUS_PID; emacs' > /init.bash
+
+CMD [ "bash", "/init.bash" ]
